--- a/back/src/SAP.API/appsettings.json
+++ b/back/src/SAP.API/appsettings.json
@@ -1,7 +1,8 @@
 {
-    "ConnectionStrings": {
-        "DataSql": "Server=DESKTOP-B6LF426;Database=parcial_02;User Id=sa;Password=1234;"
-    },
+  "ConnectionStrings": {
+    "DataSql": "Server=BOOK-FF0LD4FAU8;Database=parcial_02;User Id=sa;Password=1234;"
+    //"DataSql": "Server=DESKTOP-B6LF426;Database=parcial_02;User Id=sa;Password=1234;"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
